This code will ensure word wrap for all long sentences

--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@ legend {
 
 .libraryCard > p {
   padding: 0.15em;
+  word-break: break-all;
 .cardRow > .infoLabel {
   width: 25%;
   /* margin-right: 1em; */
